--- a/Web_Server_Final_Games/appsettings.json
+++ b/Web_Server_Final_Games/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GamesContext": "Server=(localdb)\\mssqllocaldb;Database=Games;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
